--- a/guide_lite_v2.tex
+++ b/guide_lite_v2.tex
@@ -559,7 +559,7 @@ Pour cela, il vous suffit d'écrire en préambule de votre document (avant le \c
  
 \columnbreak
 
-$\rightarrow$ Le \verb|\R| est le nom de votre commande tandis que le \cmd{mathbb}{R} est ce que votre commande va effectuer. Voila, maintenant, pour écrire $ \mathbb{R} $ il vous suffira d'écrire \verb|\R|.\\
+$\rightarrow$ Le \verb|\R| est le nom de votre commande tandis que le \cmd{mathbb}{R} est ce que votre commande va effectuer. Voilà, maintenant, pour écrire $ \mathbb{R} $ il vous suffira d'écrire \verb|\R|.\\
 \end{multicols}
 
 Maintenant il faudrait que votre commande puisse accepter des paramètres, c'est à dire de la forme \cmdi{macommande}{argument}. Il faut donc modifier la commande précédente ainsi :
