--- a/guide_lite_v2.tex
+++ b/guide_lite_v2.tex
@@ -313,7 +313,7 @@ $\rightarrow$ Sans le \texttt{\tb centering}, l'image sera à gauche.
 
 \columnbreak
 
-$\rightarrow$ L'argument "h" indique que l'on veut que notre image soit ici ("here"), c'est à dire là où on écrit le texte. On peut aussi mettre b ou t pour "top" et "bottom" par exemple, ainsi notre image se retrouvera en haut ou en bas de la page peut importe où l'on a écrit la commande.
+$\rightarrow$ L'argument "h" indique que l'on veut que notre image soit ici ("here"), c'est à dire là où on écrit le texte\footnote{Si cela ne marche pas, vous pouvez mettre "H" à la place de "h", cela nécessite le package \texttt{float}}. On peut aussi mettre b ou t pour "top" et "bottom" par exemple, ainsi notre image se retrouvera en haut ou en bas de la page peut importe où l'on a écrit la commande.
 \end{multicols}
 
 
